# splitgram

./: '  .gitignore  CMakeLists.txt  README.md  \  app.cpp  button.cpp  client.cpp  compile_commands.json  crypto.cpp  hellowrld.cpp  main.cpp  server.cpp  window.cpp
assets/styles/: style.css
includes/: button.cc  button.h  buttons.cc  buttons.h  client.h  cryptography.h  helloworld.cc  helloworld.h  home.cc  home.h  server.h
src/: client.cc  cryptography.cc  home.cc  server.cc  test.cc
style/: button.css  style.css
